--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "@wordpress/eslint-plugin": "^2.3.0",
+    "add": "^2.0.6",
     "ajv": "^6.10.1",
     "ansi-colors": "^4.1.1",
+    "asu-web-standards-bootstrap4": "git+https://github.com/gios-asu/asu-web-standards-bootstrap4.git",
     "autoprefixer": "^9.6.1",
     "babel-jest": "^24.8.0",
     "browser-sync": "^2.26.7",
@@ -50,7 +52,6 @@
     "gulp-phpcs": "^3.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-wp-pot": "^2.3.5",
     "gulp-potomo": "^1.1.0",
     "gulp-print": "^5.0.2",
     "gulp-rename": "^1.4.0",
@@ -58,6 +59,7 @@
     "gulp-string-replace": "^1.1.2",
     "gulp-tabify": "0.0.2",
     "gulp-uglify": "^3.0.2",
+    "gulp-wp-pot": "^2.3.5",
     "gulp-zip": "^5.0.0",
     "import-fresh": "^3.1.0",
     "jest": "^24.8.0",
